Added checks to ensure proper handling of old node names for downwards compatibility.